# LeakDetect

./: .gitignore  CMakeLists.txt  README.md
Descripter/: classtest.cpp  descript_socket.c  tmp.txt
OverFlow/: test.cpp
crypt/: crypt_test.cpp
gtest/sample/: MockTest.cpp  MockTrtle.h  Turtle.h  gtest1.cpp  test
src/: AddrConfilm.cpp  AddrConfilm.hpp  HookAllocate.cpp  HookAllocate.hpp  LeakDetect.hpp  ManageClass.cpp  ManageClass.hpp  RAIILockClass.hpp  lockCheck.cpp  test.cpp
